--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "hyunmoahn",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode production"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.0.4",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10"
