--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "hyunmoahn",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production --config ./webpack.prod.config.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.0.4",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-merge": "^4.1.2"
   }
 }
