--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "hyunmoahn",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production --config ./webpack.prod.config.js"
+    "start": "NODE_ENV=development webpack --mode development --config ./webpack.dev.config.js",
+    "build": "NODE_ENV=production webpack --mode production --config ./webpack.prod.config.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
