--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "hyunmoahn",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development webpack --mode development --config ./webpack.dev.config.js",
+    "start": "NODE_ENV=development webpack-dev-server --hot --inline --mode development --config ./webpack.dev.config.js",
     "build": "NODE_ENV=production webpack --mode production --config ./webpack.prod.config.js"
   },
   "dependencies": {
@@ -18,5 +18,8 @@
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-merge": "^4.1.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.0"
   }
 }
