--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.0.4",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "webpack-dev-server": "^3.1.0"
   }
 }
