--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
+    "react-hot-loader": "^4.0.0",
     "webpack-dev-server": "^3.1.0"
   }
 }
