--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
   },
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
     "react-hot-loader": "^4.0.0",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.20.2",
     "webpack-dev-server": "^3.1.0"
   }
 }
