--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.10",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
