husky, lint-stage를 이용하여 precommit, prepush 훅 추가

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --hot --inline --mode development --config ./webpack.dev.config.js",
-    "build": "NODE_ENV=production webpack --mode production --config ./webpack.prod.config.js"
+    "build": "NODE_ENV=production webpack --mode production --config ./webpack.prod.config.js",
+    "lint": "eslint app --ext .js,.jsx",
+    "precommit": "lint-staged",
+    "prepush": "yarn lint"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -32,6 +38,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
     "react-hot-loader": "^4.0.0",
