--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-merge": "^4.1.2"
