--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "ua-parser-js": "^0.7.17",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-merge": "^4.1.2"
