--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
